// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="MenuItem-stringContent"
      >
        Item
      </span>
    </li>
  </div>
</div>
`;

exports[`MenuItem has chevron if has nested menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <span
        class="MenuItem-stringContent"
      >
        Item
      </span>
      <div
        class="Container-flex Container-inline"
        style="margin-left: 0.5rem;"
      >
        <svg
          class="SvgChevronMinor16-root"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
          />
        </svg>
      </div>
    </li>
  </div>
</div>
`;
